--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,42 +1,96 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
+  padding: 1.5rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.Content {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h1 {
+  font-size: clamp(0.5rem, 2rem + 1vw, 3.5rem);
+}
+
+h2 {
+  color: var(--primary-text-color);
+  font-size: clamp(0.8rem, 1rem + 1vw, 5rem);
+}
+
+h3 {
+  font-size: clamp(0.3rem, 0.5rem + 1vw, 3rem);
+}
+
+p {
+  text-align: justify;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  font-size: clamp(0.7rem, 0.7rem + 0.5vw, 3rem);
+  margin-top: 1vw;
+}
+
+span {
+  color: var(--primary-text-color);
+  font-size: clamp(0.9rem, 0.9rem + 1vw, 3rem);
+}
+
+i.bi {
+  color: var(--icon-color);
+  font-size: clamp(1.5rem, 1.5rem + 1vw, 4rem);
+}
+
+.btn-outline-theme {
+  border-color: var(--outline-color);
+}
+
+.btn {
+  background-color: var(--button-color);
+  color: var(--button-text);
+  width: 100%;
+  margin-top: 10%;
+}
+
+.btn:hover {
+  background-color: var(--button-hover);
+  color: var(--button-text);
+}
+
+.card-header {
+  width: 100%;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid black;
+  padding: 10px 0;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+  max-height: 2rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+@media (max-width: 40em) {
+  .Content {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .App {
+    height: auto;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  img {
+    object-fit: cover;
+    object-position: top;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
