--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --background-color: #000000;
+  --background-color: #ffff;
   --foreground-color: #6a97e9;
   --primary-text-color: black;
   --icon-color: black;
